modify poetry mirror

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ PySide6-Fluent-Widgets = "^1.5.1"
 [[tool.poetry.source]]
 name = "mirrors"
 url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
-priority = "default"
+priority = "primary"
 
 [build-system]
 requires = ["poetry-core"]
